--- a/studasspage.html
+++ b/studasspage.html
@@ -8,6 +8,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-functions-compat.js"></script>
   </head>
   <body>
     <header>
@@ -86,6 +87,7 @@
       };
       firebase.initializeApp(firebaseConfig);
       const db = firebase.firestore();
+      const functions = firebase.functions();
     </script>
   </body>
 </html>
