--- a/studlogin.html
+++ b/studlogin.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduMetrics | Student Login</title>
     <link rel="stylesheet" href="studlogin.css">
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <style>
         /* Additional styles for form footer link */
         .form-footer {
