--- a/teachersignup.html
+++ b/teachersignup.html
@@ -61,30 +61,80 @@
     <!-- Modal Container -->
     <div id="modalContainer" class="modal-hidden"></div>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
     <script src="modal.js"></script>
     <script>
-        document.getElementById('signupForm').addEventListener('submit', function(event) {
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_AUTH_DOMAIN",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_STORAGE_BUCKET",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        document.getElementById('signupForm').addEventListener('submit', async function(event) {
             event.preventDefault(); // Stop default form submission
 
             const password = document.getElementById('password').value;
             const confirmPassword = document.getElementById('confirm-password').value;
+            const email = document.getElementById('email').value;
             const errorElement = document.getElementById('passwordError');
 
             if (password !== confirmPassword) {
                 // Passwords DO NOT match: show error and STOP navigation
                 errorElement.style.display = 'block';
                 document.getElementById('confirm-password').focus();
-            } else {
-                // Passwords match: proceed to the login page (or show success alert then redirect)
-                errorElement.style.display = 'none';
-                
-                // 1. Show success message
-                showCustomAlert('Sign Up Successful', 'Sign Up successful! Please log in with your new credentials.');
+                return;
+            }
 
-                // 2. Redirect DIRECTLY to the login page
+            // Passwords match: proceed with Firestore save
+            errorElement.style.display = 'none';
+            
+            try {
+                // Show loading message
+                showCustomAlert('Creating Account', 'Creating your teacher account... Please wait.');
+
+                // Check if teacher already exists
+                const existingTeacher = await db.collection('teachers')
+                    .where('email', '==', email)
+                    .get();
+
+                if (!existingTeacher.empty) {
+                    showCustomAlert('Account Exists', 'An account with this email already exists. Please use a different email or try logging in.');
+                    return;
+                }
+
+                // Save new teacher to Firestore
+                const teacherData = {
+                    email: email,
+                    password: password, // Note: In production, use Firebase Auth for secure password handling
+                    createdAt: new Date(),
+                    isActive: true
+                };
+
+                const docRef = await db.collection('teachers').add(teacherData);
+                console.log('Teacher account created with ID: ', docRef.id);
+
+                // Show success message
+                showCustomAlert('Sign Up Successful', 'Account created successfully! Please log in with your new credentials.');
+
+                // Redirect to login page after 2 seconds
                 setTimeout(() => {
                     window.location.href = "teacherlogin.html";
                 }, 2000);
+
+            } catch (error) {
+                console.error('Error creating teacher account:', error);
+                showCustomAlert('Error', 'Failed to create account. Please try again.');
             }
         });
     </script>
