--- a/teacherlogin.html
+++ b/teacherlogin.html
@@ -63,12 +63,12 @@
     <script>
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyBLUXbAALnqjtLyQNCktQO8eS1TKvE6-Dc",
+            authDomain: "edumetrics-62601.firebaseapp.com",
+            projectId: "edumetrics-62601",
+            storageBucket: "edumetrics-62601.firebasestorage.app",
+            messagingSenderId: "1008049617356",
+            appId: "1:1008049617356:web:ce2aa07a1ebc3533444569"
         };
 
         // Initialize Firebase
